--- a/design/index.html
+++ b/design/index.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UIkit Navbar</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.20.3/dist/css/uikit.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webshop Stayfit</title>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.19.4/dist/css/uikit.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <nav class="uk-navbar-container" uk-navbar>
+  <!-- Navbar -->
+  <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
     <div class="uk-navbar-left">
       <button class="uk-button uk-button-default">Shop <span class="uk-margin-small-left">＋</span></button>
-      <ul class="uk-navbar-nav uk-margin-left">
-        <li><a href="#">Het plan</a></li>
-        <li><a href="#">Werken bij</a></li>
+      <ul class="uk-navbar-nav">
+        <li><a href="#">Het Plan</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
 
     <div class="uk-navbar-center">
       <a href="#" class="uk-navbar-item uk-logo">
-        <img src="logo.png" alt="Logo" style="height:40px;">
+        <img src="img/logo.png" alt="Logo" style="height: 54px; object-fit: contain;">
       </a>
     </div>
 
-    <div class="uk-navbar-right">
+    <div class="uk-navbar-right" style="margin-left: 1160px;">
       <ul class="uk-navbar-nav">
         <li><a href="#">Zoek</a></li>
         <li><a href="#">Log in</a></li>
-        <li><a href="#">Mand (4)</a></li>
+        <li><a href="#">Mand</a></li>
       </ul>
     </div>
   </nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.20.3/dist/js/uikit.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.20.3/dist/js/uikit-icons.min.js"></script>
+  <!-- Inlogmelding -->
+  <div class="uk-container uk-padding-small">
+    <div class="uk-alert-success" uk-alert>
+      <a class="uk-alert-close" uk-close></a>
+      <p>Hier tonen we o.a. of het inloggen succesvol was.</p>
+    </div>
+  </div>
+
+  <!-- Inhoud -->
+  <main class="uk-container uk-padding">
+    <div class="uk-grid-small" uk-grid>
+      <!-- Sidebar -->
+      <section class="uk-width-1-4@m">
+        <h4>Categorieën</h4>
+        <hr class="uk-divider">
+        <label><input class="uk-checkbox" type="checkbox"> Wedstrijd kippen</label><br>
+        <label><input class="uk-checkbox" type="checkbox"> Verf</label><br>
+        <label><input class="uk-checkbox" type="checkbox"> Broedmachines</label><br>
+        <label><input class="uk-checkbox" type="checkbox"> Hokken</label>
+      </section>
+
+      <!-- Producten -->
+      <section class="uk-width-expand@m">
+        <h5 class="uk-text-muted uk-text-small">Gekozen categorieën: <span class="uk-text-primary">Alle</span></h5>
+
+        <div class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid>
+          <div>
+            <a class="uk-card uk-card-default uk-card-hover uk-card-small" href="product.html">
+              <div class="uk-card-media-top">
+                <img src="img/white-chicken.jpg" alt="Witte kip">
+              </div>
+              <div class="uk-card-body">
+                <p>Een ideale kip voor beginnende wedstrijd deelnemer.</p>
+                <p class="uk-text-danger uk-text-bold uk-text-right">&euro; 19,95</p>
+              </div>
+            </a>
+          </div>
+          <!-- Voeg hier meer producten toe -->
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.4/dist/js/uikit.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.4/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
