--- a/design/index.html
+++ b/design/index.html
@@ -13,10 +13,10 @@
   <!-- Navbar -->
   <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
     <div class="uk-navbar-left">
-      <button class="uk-button uk-button-default">Shop <span class="uk-margin-small-left">＋</span></button>
+      <button class="uk-button uk-button-default" style="color: black;">Shop <span class="uk-margin-small-left" style="color: black;">＋</span></button>
       <ul class="uk-navbar-nav">
-        <li><a href="#">Het Plan</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" style="color: black;">Het Plan</a></li>
+        <li><a href="#" style="color: black;">Contact</a></li>
       </ul>
     </div>
 
@@ -28,9 +28,9 @@
 
     <div class="uk-navbar-right" style="margin-left: 1160px;">
       <ul class="uk-navbar-nav">
-        <li><a href="#">Zoek</a></li>
-        <li><a href="#">Log in</a></li>
-        <li><a href="#">Mand</a></li>
+        <li><a href="#" style="color: black;">Zoek</a></li>
+        <li><a href="#" style="color: black;">Log in</a></li>
+        <li><a href="#" style="color: black;">Mand</a></li>
       </ul>
     </div>
   </nav>
